Archive2/7f/613fff4ed67b12/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:36:1: error: expected ‘}’ at end of input
 }
 ^
